--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "JoinLife-Api",
+  "name": "JoinLifeApi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,18 +9,19 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "prisma": "^5.4.1"
-  },
   "dependencies": {
-    "@prisma/client": "5.4.1",
+    "@prisma/client": "^5.4.2",
+    "all": "^0.0.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
+    "prisma": "^5.4.2"
   }
 }
